# KogniTerm

./: .env  .env.example  .gemini_interpreter_history  .gitignore  .kogniterm_history  =0.47.0  ARQUITECTURA_KOGNITERM.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INFORME_ANALISIS_KOIGNITERM.md  INFORME_INVESTIGACION_KOGNITERM.md  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  PyPI-Recovery-Codes-gatovillano-2026-01-05T05_48_00.803492.txt  README.md  REFACTORING_LOG.md  archivo_prueba_herramientas.txt  cleanup_report_dry.txt  debug.py  debug_call_agent_parsing.py  debug_indexing.py  debug_paths.py  debug_search.py  debug_simple_parsing.py  debug_tools.py  diff_bash.txt  docker-compose.yml  igue  install.sh  investigacion_kogniterm_propuesta_desktop.md  kogniterm-architecture.html  kogniterm.cast  kogniterm5.cast  kogniterm_config.py  kogniterm_hermes_comparison.md  kogniterm_kernel.py  llm_service_patch.diff  main.py  patch_llm_service.py  patch_provider.py  (+54 more)
.agent/rules/: registro-cambios.md
.agents/: AGENTS.md
.github/: copilot-instructions.md  idioma.md
.github/workflows/: macos_test.yml  tests.yml
.kilocode/: mcp.json
.kogniterm/: command_history.txt
.kogniterm/vector_db/: chroma.sqlite3
.superpowers/sdd/: progress.md  task-1-report.md  task-2-report.md
crud_tool/: server.py
dashboard/: README.md  config.json  index.html
docs/: ARCHITECTURE_ANALYSIS.md  CLI_REFERENCE.md  Cambios.md  Cambios_additional.md  Indice_Cambios.md  Informe_Herramientas_Skills.md  KogniTerm_Manual_Tecnico.md  KogniTerm_Refactorization_Proposal.md  Plan_Continuacion_Refactor_Servidor_Cliente.md  REPO_ORGANIZATION.md  SKILL.md  analisis_bash_agent.md  analisis_refactorizacion_kogniterm.md  arquitectura-cliente-servidor.md  arquitectura_documentacion.md  auditoria_codigo_maestra.md  auditoria_completa_2025-10-18.md  autonomous_agent_proposal.md  autosave_versioning_system.md  development_log.md  especificacion_migracion_tools_skills.md  flow_diagram.md  gemini_cli_files.md  history_manager_documentation.md  informe_auditoria_maestra.md  investigacion_kilocode_arquitectura.md  investigacion_kilocode_mejoras.md  investigacion_skills_architecture.md  migracion_sistema_skills.md  modules.md  orchestrator_refactor_proposal.md  overview.md  plan_creation_tool.md  plan_migracion_cliente_servidor.md  rag_codebase_proposal.md  rag_implementation_plan.md  rag_implementation_status.md  rag_verification_plan.md  refactor_implementation_plan.md  registro_errores_soluciones.md  (+6 more)
docs/landing/: index.html  script.js  style.css
docs/plans/: propuesta_kogniterm_desktop_tauri.md
gemini_interpreter/: requirements.txt
gemini_interpreter/core/: command_executor.py  interpreter.py  tools.py
gemini_interpreter/terminal/: terminal.py
kogniterm/: AUDITORIA_CODESMELLS.md  __init__.py  main.py  requirements.txt  scratch.py
kogniterm-desktop/: .gitignore  IMPLEMENTATION.md  README.md  package-lock.json  package.json  start-dev.sh  turbo.json
kogniterm-desktop/docs/: Cambios.md
kogniterm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
kogniterm/core/: agent_interaction.py  agent_state.py  config.py  (+23 more)
plans/: propuesta_kogniterm_desktop_tauri.md
scratch/: append_changes.py  append_changes_kognitoai.py  append_changes_react.py  fix_llm_service.py  list_kognito_tools.py  list_tools.py  test_agents.py  test_border_2.py  test_horizontal.py  test_id_parsing.py  test_init_debug.py  test_integrated_parser.py  test_mount.py  test_parallel.py  test_parsing_issue.py  test_parsing_standalone.py  test_prefix.py  test_pyte.py  test_researcher.py  test_researcher_2.py  test_tavily.py  test_textual_terminal.py  test_textual_transparency.py  test_threads.py  test_tool.py  test_tool_execution.py  test_tool_parser.py
scripts/: debug_tcss.py  debug_tcss_original.py  patch_llm_service.py  planning_agent.py  test_interrupt.sh
test_environment/: main.py  planner_agent.py  reporter_agent.py  research_agents.py  researcher_crew.py  synthesizer_agent.py  tools.py
tests/: conftest.py  test_antigravity_integration.py  test_basic.py  test_cot_stream_parser.py  test_file_completer_fuzzy.py  test_multi_provider_manager.py  test_new_skills_features.py  test_parsing_only.py  test_pty_skill.py  test_siliconflow_fix.py  test_skill_manager.py  test_telegram_config_cli.py  test_universal_parsing.py  verify_history_summary.py  verify_truncate_fix.py  verify_truncate_fix_simple.py
(+408 files in other folders)
