[project]
name = "kogniterm"
version = "0.5.0"
description = "KogniTerm: Tu agente evolutivo de terminal inteligente 🚀"
authors = [
    { name = "Gato Villano", email = "stola@disroot.org" }
]
dependencies = [
    "python-dotenv",
    "langchain",
    "langchain-core",
    "langgraph",
    "prompt_toolkit",
    "langchain_mcp_adapters",
    "langchain_community",
    "beautifulsoup4",
    "PyGithub",
    "rich",
    "google-genai",
    "jupyter_client",
    "loguru",
    "colorama",
    "gitignore-parser",
    "watchdog",
    "litellm",
    "GitPython",
    "pydantic",
    "pydantic-settings",
    "urllib3<2",
    "nest_asyncio",
    "tiktoken",
    "requests",
    "textual",
    "pyte",
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
    "python-telegram-bot",
  ]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["terminal", "ai", "agent", "assistant", "llm", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
]

[project.optional-dependencies]
rag = [
    "chromadb",
    "fastembed",
]
browser = [
    "playwright",
]
pc-control = [
    "opencv-python",
    "pyautogui",
    "pywinctl",
    "python-xlib",
    "pillow",
]
vis = [
    "matplotlib",
]
full = [
    "kogniterm[rag,browser,pc-control,vis]",
]
dev = [
    "radon",
    "pylint",
    "pytest",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/gatovillano/KogniTerm"
Repository = "https://github.com/gatovillano/KogniTerm"
Issues = "https://github.com/gatovillano/KogniTerm/issues"

[project.scripts]
kogniterm = "kogniterm.terminal.terminal:main"
kogniterm-server = "kogniterm.server.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
kogniterm = ["*.txt", "*.json", "*.md"]
