[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kogniterm"
version = "1.2.0"
description = "KogniTerm: An advanced AI-powered terminal"
readme = "README.md"
dependencies = [
    "python-dotenv",
    "langchain",
    "langchain-core",
    "langgraph",
    "prompt_toolkit",
    "langchain_mcp_adapters",
    "langchain_community",
    "bs4",
    "PyGithub",
    "rich",
    "google-generativeai",
    "google-genai",
    "chromadb",
    "jupyter_client",
    "loguru",
    "colorama",
    "gitignore-parser",
    "watchdog",
    "litellm",
    "GitPython",
    "pydantic",
    "pydantic-settings",
    "urllib3<3",
    "nest_asyncio",
    "tiktoken",
    "requests",
    "textual",
    "pyte",
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
    "python-telegram-bot",
    "playwright",
    "fastembed",
    "websockets",
    "httpx",
]

[project.scripts]
kogniterm = "kogniterm.terminal.terminal:main"
kogniterm-server = "kogniterm.server.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["kogniterm*"]

